@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright 2022 - 2026 The Original Authors
   ~
@@ -20,7 +19,7 @@
     <parent>
         <groupId>org.elasticsoftwarefoundation.akces</groupId>
         <artifactId>akces-framework-parent</artifactId>
-        <version>0.11.0-SNAPSHOT</version>
+        <version>0.12.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>akces-framework-test-apps</artifactId>
@@ -137,7 +136,7 @@
                                     <BP_JVM_JLINK_ENABLED>false</BP_JVM_JLINK_ENABLED>
                                     <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
                                     <BP_JVM_CDS_ENABLED>false</BP_JVM_CDS_ENABLED>
-                                    <JAVA_TOOL_OPTIONS>-XX:+UseZGC -XX:+ZGenerational</JAVA_TOOL_OPTIONS>
+                                    <JAVA_TOOL_OPTIONS>-XX:+UseZGC</JAVA_TOOL_OPTIONS>
                                 </env>
                                 <buildpacks>
                                     <buildpack>paketo-buildpacks/ca-certificates</buildpack>
@@ -187,7 +186,7 @@
                                     <BP_JVM_JLINK_ENABLED>false</BP_JVM_JLINK_ENABLED>
                                     <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
                                     <BP_JVM_CDS_ENABLED>false</BP_JVM_CDS_ENABLED>
-                                    <JAVA_TOOL_OPTIONS>-XX:+UseZGC -XX:+ZGenerational</JAVA_TOOL_OPTIONS>
+                                    <JAVA_TOOL_OPTIONS>-XX:+UseZGC</JAVA_TOOL_OPTIONS>
                                 </env>
                                 <buildpacks>
                                     <buildpack>paketo-buildpacks/ca-certificates</buildpack>
